--- a/Win10Notifications/Win10Notifications.csproj
+++ b/Win10Notifications/Win10Notifications.csproj
@@ -97,13 +97,11 @@
     </Compile>
     <Compile Include="Controls\MyToastNotificationControl.xaml.cs" />
     <Compile Include="Converters\StringToVisibilityConverter.cs" />
-    <Compile Include="Helpers\BackgroundTaskHelper.cs" />
-    <Compile Include="Helpers\BindableBase.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SampleConfiguration.cs" />
+    <Compile Include="RfcommConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
