Added bluetooth radio button, bluetooth server start at launch, added (new, cleared, repositioned) text to send

--- a/Win10Notifications/Win10Notifications.csproj
+++ b/Win10Notifications/Win10Notifications.csproj
@@ -101,6 +101,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RadioModel.cs" />
     <Compile Include="RfcommConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
