Notification listener has a background task for background server connection

--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -108,6 +108,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NotificationListenerTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RfcommServerTask.cs" />
   </ItemGroup>
