--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -113,6 +113,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RfcommServerTask.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.Toolkit.Uwp.Notifications">
+      <HintPath>..\..\..\..\.nuget\packages\Microsoft.Toolkit.Uwp.Notifications\1.5.1\lib\uap10.0\Microsoft.Toolkit.Uwp.Notifications.dll</HintPath>
+    </Reference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
