Added app notification dismiss background trigger to send message to dismiss notification; resharped code

--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -112,6 +112,7 @@
     <Compile Include="NotificationListenerTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RfcommServerTask.cs" />
+    <Compile Include="ToastNotificationHistoryChangedTriggerTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Toolkit.Uwp.Notifications">
