--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -109,6 +109,7 @@
     <Compile Include="NotificationListenerTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RfcommServerTask.cs" />
+    <Compile Include="ToastNotificationActionTriggerTask.cs" />
     <Compile Include="ToastNotificationHistoryChangedTriggerTask.cs" />
   </ItemGroup>
   <ItemGroup>
