Fixed tasks in background; fixed UpdateNotifications async method; added AndroidNotification class to store received notifications in a list; improved showing received notifications and dismissing them

--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -105,6 +105,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Models\AndroidNotification.cs" />
     <Compile Include="Models\NotificationApp.cs" />
     <Compile Include="NotificationListenerTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
