--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -116,17 +116,18 @@
     <Compile Include="ToastNotificationHistoryChangedTriggerTask.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Toolkit.Uwp.Notifications">
-      <HintPath>..\..\..\..\.nuget\packages\Microsoft.Toolkit.Uwp.Notifications\1.5.1\lib\uap10.0\Microsoft.Toolkit.Uwp.Notifications.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.4.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications">
       <Version>2.0.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Win32\Win32.csproj">
+      <Project>{2b1b0bde-0e58-4c50-ae25-d7e9517b26d1}</Project>
+      <Name>Win32</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
